--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<p>Welcome to my website, hosted on master branch! </p>
+	<p> Okay, this is my test to see if I can use atom and github locally. </p>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
