--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<p> Another test. </p>
+	<p> Another test on dev branch. </p>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
