Include master branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<p> Another test on dev branch. </p>
+	<p> Locally, your browswer will run whichever file in your current branch.</p>
+	<h1>This is the master branch</h1>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
