Wrote down the goal of project moonstone

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<p> Locally, your browswer will run whichever file in your current branch.</p>
-	<h1>This is the master branch</h1>
+	<h1>Project Moonstone</h1>
+	<p>There is no exact goal to project moonostone, aside from learning the
+		the following:</p>
+		<ul>
+			<li>HTML, CSS, javascript</li>
+			<li>Website hosting with gh-pages and AWS</li>
+			<li>Git and  Github</li>
+			<li>Using tone.js to create awesome sounds and integrate my glove project</li>
+			<li>Installing an e-commerce plugin and selling <i>something</i> because it seems cool</li>
+		</ul>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
