--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-</head>
-<body>
-	<h1>Project Moonstone</h1>
-	<p>There is no exact goal to project moonostone, aside from learning the
-		the following:</p>
-		<ul>
-			<li>HTML, CSS, javascript</li>
-			<li>Website hosting with gh-pages and AWS</li>
-			<li>Git and  Github</li>
-			<li>Using tone.js to create awesome sounds and integrate my glove project</li>
-			<li>Installing an e-commerce plugin and selling <i>something</i> because it seems cool</li>
-		</ul>
-	<script type="text/javascript" src="js/index.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- meta tag -->
+    <meta charset="utf-8">
+
+		<!-- Custom CSS -->
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+    <title>Project Moonstone</title>
+  </head>
+
+  <body>
+    <h1>Project Moonstone</h1>
+    <h2>Uncover hidden relationshps in health data</h2>
+    <p>Coming Soon</p>
+		</ol>
+  </body>
+
+    <!-- Optional JavaScript -->
+		<script type="text/javascript" src="js/index.js"></script>
+
 </html>
