--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <h1>Project Moonstone</h1>
-    <h2>Uncover hidden relationshps in health data</h2>
+    <h2>Help discover hidden relationshps in health data</h2>
     <p>Coming Soon</p>
 		</ol>
   </body>
