--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       data from a server and plot the results.</p>
     <h3>Project Workflow</h3>
     <ol>
-      <li>Write SQL to access a health database. Database must contain a ton of quantifiable quantifiable health metrics.</li>
+      <li>Write SQL (the most popular RDBMS) to access a health database. Database must contain a ton of quantifiable quantifiable health metrics.</li>
         <ol>
           <li>Where can I obtain such a database?</li>
         </ol>
