--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- meta tag -->
     <meta charset="utf-8">
 
-		<!-- Custom CSS -->
+		<!-- Custom CSS (Use Flexbox and CSS grid-->
 		<link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Project Moonstone</title>
   </head>
@@ -30,7 +30,7 @@
           <li>You can mix-and-match databases, to provide more variety and freedom in your analysis</li>
         </ol>
       <li>Write SQL to gather and store the list</li>
-			<li>Write Python to parse through the numbers</li>
+			<li>Write Python (Django) to parse through the numbers</li>
 			<li>Display the relationship in a graph, State the R^2 Value</li>
 		</ol>
 
@@ -43,6 +43,7 @@
         <li><a href="https://archive.physionet.org/physiobank/database/mimic2cdb-ps/">MIMIC-II</a> is a public Data Set with 110 patient entries.</li>
         <li>PhysioNet's open datasets may allow the user to access one or many comparisons across many databases. When running their analysis.</li>
       </ol>
+    <h4>Design the UI of the site? So people will know how it works?</h4>
 
 
 
