--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li>You can mix-and-match databases, to provide more variety and freedom in your analysis</li>
         </ol>
       <li>Write SQL to gather and store the list</li>
-			<li>Write Python (Django) to parse through the numbers</li>
+			<li>Write Python (Django or Flask) to parse through the numbers</li>
 			<li>Display the relationship in a graph, State the R^2 Value</li>
 		</ol>
 
