added languages to be learned

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- meta tag -->
     <meta charset="utf-8">
 
-		<!-- Custom CSS (Use Flexbox and CSS grid-->
+		<!-- Custom CSS -->
 		<link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Project Moonstone</title>
   </head>
