--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Project Moonstone</h1>
     <h2>Help discover hidden relationshps in health data</h2>
     <p>Coming Soon</p>
-		</ol>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxz4P2xFsqZFWUWLmJArRt1mwgn09IlpgbShtnw0XHFm8MwnkarV8RhIt1Zmw-Ap3-rHRu9ahHWQlT/embed?start=false&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </body>
 
     <!-- Optional JavaScript -->
