--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Project Moonstone</h1>
     <h2>Help discover hidden relationshps in health data</h2>
     <p>Coming Soon</p>
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxz4P2xFsqZFWUWLmJArRt1mwgn09IlpgbShtnw0XHFm8MwnkarV8RhIt1Zmw-Ap3-rHRu9ahHWQlT/embed?start=false&loop=false&delayms=10000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	<iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F3Vo1VKZMDra1Su7imBj2N4%2FComb-Onboarding%3Fnode-id%3D351%253A501" allowfullscreen></iframe>
   </body>
 
     <!-- Optional JavaScript -->
