--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>Project Moonstone</title>
+    <title>Test</title>
   </head>
 
   <body>
-    <h1>Project Moonstone</h1>
-    <h2>Help discover hidden relationshps in health data</h2>
-    <p>Coming Soon</p>
+    <p>Test with iframe + Figma</p>
 	<iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F3Vo1VKZMDra1Su7imBj2N4%2FComb-Onboarding%3Fnode-id%3D351%253A501" allowfullscreen></iframe>
   </body>
 
